# EdgeMLP

./: LICENSE  README.md
.github/workflows/: tests.yml
src/training/: CMakeLists.txt
src/training/include/: Activation.h  Loss.h  MLP.h  Matrix.h
src/training/include/activation_functions/: Linear.h  Relu.h  Sigmoid.h  Tanh.h
src/training/include/loss_functions/: MSE.h
src/training/src/: Activation.cpp  MLP.cpp  Matrix.cpp  main.cpp
src/training/src/activation_functions/: Linear.cpp  Relu.cpp  Sigmoid.cpp  Tanh.cpp
src/training/src/loss_functions/: MSE.cpp
src/training/tests/: CMakeLists.txt  MLPTests.cpp  MSETests.cpp  MatrixTest.cpp  ReluTests.cpp  SigmoidTest.cpp  TanhTests.cpp
